newDesign/css/shop.css
body {
    background-color: #fff;
}
.clear {
    clear: both;
}
.bodyContainer {
    padding: 0 50px;
}
.topSearch {
    padding: 30px 0;
}
.searchBar input[type="text"] {
    height: 48px;
    width: calc(100% - 103px);
    max-width: 412px;
    border: 1px solid #DDDEE2;
    border-radius: 4px;
    background-color: #FFFFFF;
    float: left;
    margin-right: 10px;
    font-size: 16px;
    color: #858B98;
    font-weight: 500;
    line-height: 26px;
    padding: 0 10px;
}
.searchBar input[type="submit"] {
    height: 46px;
    width: 93px;
    border-radius: 4px;
    color: #fff;
    font-size: 14px;
    font-weight: 600;
    background-color: #2864FF;
    border: none;
    -webkit-appearance: none;
}

.searchBar input[type="submit"]:hover {
    cursor: pointer;
    background-color: #003dda;
}

.moreFilters {
    margin-top: 20px;
}
.moreFilters select {
    border: 2px solid #3C465A;
    border-radius: 4px;
    float: left;
    margin-right: 10px;
    color: #3C465A;
    font-family: Poppins;
    font-size: 12px;
    font-weight: 600;
    letter-spacing: -0.38px;
    line-height: 18px;
    outline: none;
    padding: 5px 10px;
    background-color: #F4F7FF;
    cursor: pointer;
}
.moreFilters label {
    border: 2px solid #3C465A;
    border-radius: 4px;
    float: left;
    margin-right: 10px;
    color: #3C465A;
    font-family: Poppins;
    font-size: 12px;
    font-weight: 600;
    letter-spacing: -0.38px;
    line-height: 18px;
    padding: 7px 10px 3px;
    cursor: pointer;
}
.moreFilters label input[type="checkbox"] {margin-right: 10px;height: 12px;}

.promotions, .byCategory {
    clear: both;
    padding-bottom: 50px;
}

.promotions h1, .byCategory h1 {
    color: #3C465A;
    font-size: 20px;
    font-weight: 600;
    line-height: 30px;
    text-align: left;
    padding: 50px 0 10px;
}
.promotions .col-3 {
    width: 33%;
    float: left;
    box-sizing: border-box;
    text-align: center;
}

.promotions .col-3 img {
    width: calc(100% - 30px);
    margin: 0 auto;
}

.promotions.brands .col-4 {
    text-align: left;
}

.promotions.brands img {
    height: 64px;
    width: calc(100% - 30px);
    margin-bottom: 20px;
    border-radius: 4px;
    background-color: #FFFFFF;
    box-shadow: 0 1px 18px 0px rgba(0,0,0,0.8);
}

.col-4 {
    width: 25%;
    float: left;
    box-sizing: border-box;
    text-align: center;
}

.brand {
    background: #fff;
    text-align: left;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
    padding: 12px 16px;
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
}

.brand h2 {
    color: #40354E;
    font-family: Poppins;
    font-size: 14px;
    font-weight: 600;
    width: 70%;
}

.brand p {
    color: #3C465A;
    font-family: Poppins;
    font-size: 12px;
    font-weight: 300;
    width: 70%;
}

.retailer-direction {
    position: absolute;
    top: calc(50% - 21px);
    right: 10px;
    color: #2864FF;
    font-family: Poppins;
    font-size: 12px;
    font-weight: 300;
    text-align: center;
}

.retailer-direction:before {
    content: "";
    display: block;
    background-color: #2864FF;
    -webkit-mask: url(../../assets/location.svg) no-repeat center;
    mask: url(../../assets/location.svg) no-repeat center;
    mask-size: cover;
    width: 62px;
    height: 24px;
}

.brands-search-results {
    clear: both;
    padding-bottom: 30px;
    position: relative;
    min-height: 330px;
}

.results-count {
    float: right;
    margin-top: 35px;
    color: #3C465A;
    font-family: Poppins;
    font-size: 16px;
    font-weight: 300;
}

.brands-search-results h1 {
    padding: 30px 0 15px;
    color: #40354E;
    font-family: Poppins;
    font-size: 20px;
    font-weight: 600;
    float: left;
}

.brands-search-results-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-gap: 15px;
    padding-bottom: 30px;
}

.brands-load-more {
    display: flex;
    justify-content: center;
}

.brands-load-more button {
    border: 2px solid black;
    width: 33%;
    text-align: center;
    outline: 0;
    background: transparent;
    padding: 10px 0;
    border-radius: 4px;
    font-family: Poppins;
    font-size: 14px;
    font-weight: 600;
}
.brands-load-more button:hover {
    cursor: pointer;
    box-shadow: 1px 2px 5px 0 rgba(0,0,0,0.5);
}

.byCategory .marketToProvide {
    height: 120px;
    border: 2px solid #4A4A4A;
    border-radius: 4px;
    background-color: rgba(255,255,255,0);
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
    padding: 20px;
    margin: 0 30px 30px 0;
}

.byCategory .marketToProvide:hover,
.brand:hover {
    cursor: pointer;
    box-shadow: 1px 2px 5px 0 rgba(0,0,0,0.5);
}

.byCategory .marketToProvide h3 {
    color: #3C465A;
    font-size: 20px;
    font-weight: 600;
    line-height: 30px;
}

.featured-brand {
    border-radius: 4px;
    background-color: #fff;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
    padding: 15px;
    position: relative;
}

.featured-brand h2 {
    color: #40354E;
    font-family: Poppins;
    font-size: 20px;
    font-weight: 600;
}

.brand-info {
    color: #3C465A;
    font-family: Poppins;
    font-size: 12px;
    font-weight: 300;
    max-width: 37%;
}

.brand-category {
    color: #858B98;
    font-family: Poppins;
    font-size: 12px;
    font-weight: 300;
}

.brand-action {
    position: absolute;
    top: calc(50% - 20px);
    right: 15px;
    display: flex;
}

.brand-action.retailers {
    position: static;
}

.brand-action a {
    color: #2864FF;
    font-family: Poppins;
    font-size: 12px;
    font-weight: 300;
    line-height: 18px;
    text-align: center;
    margin-right: 20px;
}

.brand-action a:last-child {
    margin-right: 0;
}

.brand-action a svg {
    display: block;
    width: 24px;
    margin: 0 auto;
}

.map {
    position: absolute;
    right: 15px;
    top: 10%;
    width: 60%;
    height: 80%;
}

.brand-detailed-info {
    margin: 15px 0;
}

.brand-info .key {
    font-family: Poppins;
    color: #3C465A;
    font-size: 12px;
    font-weight: 600;
    line-height: 16px;
}

.loading-cir {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 30px;
}

.loading-cir:after {
    width: 10px;
    height: 10px;
    background: transparent;
    display: block;
    top: 50%;
    left: 50%;
    margin: -5px 0 0 -25px;
    content: '';
    border-radius: 50%;
    animation : loading 1.5s infinite linear;
}

@keyframes loading {
    0%   {box-shadow: 60px 0 0 0 #00E1B4, 20px 0 0 0 blue, -20px 0 0 0 #2864FF;}
    5%   {box-shadow: 60px 0 0 0 #00E1B4, 20px 0 0 0 blue, -20px 0 0 2px #2864FF;}
    15%   {box-shadow: 60px 0 0 0 #00E1B4, 20px 0 0 0 blue, -20px 0 0 8px #2864FF;}
    20%   {box-shadow: 60px 0 0 0 #00E1B4, 20px 0 0 2px blue, -20px 0 0 10px #2864FF;}
    25%   {box-shadow: 60px 0 0 0 #00E1B4, 20px 0 0 8px blue, -20px 0 0 5px #2864FF;}
    30%   {box-shadow: 60px 0 0 2px #00E1B4, 20px 0 0 10px blue, -20px 0 0 2px #2864FF;}
    35%   {box-shadow: 60px 0 0 8px #00E1B4, 20px 0 0 5px blue, -20px 0 0 0 #2864FF;}
    40%   {box-shadow: 60px 0 0 10px #00E1B4, 20px 0 0 2px blue, -20px 0 0 0 #2864FF;}
    45%   {box-shadow: 60px 0 0 5px #00E1B4, 20px 0 0 0 blue, -20px 0 0 0 #2864FF;}
    50%   {box-shadow: 60px 0 0 2px #00E1B4, 20px 0 0 0 blue, -20px 0 0 0 #2864FF;}
    65%   {box-shadow: 60px 0 0 0 #00E1B4, 20px 0 0 0 blue, -20px 0 0 0 #2864FF;}
    100%  {box-shadow: 60px 0 0 0 #00E1B4, 20px 0 0 0 blue, -20px 0 0 0 #2864FF;}
}

@media (max-width: 1200px) {
    .promotions .col-3, .howItWorks .col-3 {
        width: 100%;
        padding-bottom: 20px;
    }
    .promotions .col-3 img {
        width: 100%;
    }
}

@media (max-width: 850px) {
    .col-4 {
        width: 50%;
    }
    .brands-search-results-grid {
        grid-template-columns: repeat(2, 1fr);
    }

    .map {
        position: static;
        width: 100%;
        height: 180px;
    }

    .brand-info {
        max-width: 100%;
    }
}

@media (max-width: 900px) {
    .bodyContainer {
        padding: 0 20px;
    }
}
@media (max-width: 600px) {
    .brands-search-results-grid {
        grid-template-columns: repeat(1, 1fr);
    }

    .inStoreLabel { margin-top: 20px;}
    .onlineLabel {clear: both;margin-top: 20px;}
}
@media (max-width: 584px) {
    .searchBar input[type="submit"] {
        margin-top: -6px;
    }
}

